fix?: trying to resolve contact display issue on iphone chrome

--- a/src/components/contact/Contact.css
+++ b/src/components/contact/Contact.css
@@ -25,9 +25,7 @@
 
 .card-container{
     margin-top: 30px;
-    display: -webkit-flex;
     display: flex;
-    -webkit-flex-wrap: wrap;
     flex-wrap: wrap;
     width: 100%;
     height: 200px;
@@ -100,10 +98,5 @@
         width: 300px;
         height: 60px;
         text-align: center;
-    }
-    .card{
-        font-size: 12px;
-        padding-top: 2px;
-        padding-bottom: 2px;
     }
 }
